2007-09-06 alex
* rename simulation_movement_interaction_workflow to simulation_movement_causality_interaction_workflow
* follow style used in delivery_causality_interaction_workflow

2007-09-06 aurel
* add archive tool

2007-09-04 yo
* Fix the way of calling reindexObject in InventoryModule_reindexMovementList

2007-09-04
*Add style in get_ODSStyleSheet

2007-08-29 yusei
* Add Folder_viewModule.

2007-08-29 jerome
* New version with field libraries

2007-08-13 jerome
* Add some global actions for history, metadata, search, sort_on and list_ui

2007-07-30 yo
* Add Movement_getPriceCalculationOperandDict.

2007-02-28 Aurel
* define most cache

2006-01-09 Vincent
* Remove catalog
* Add a dependency on erp5_catalog

2006-11-24 Aurel
* add reset parameter when calling Base_viewWorklist

2006-10-31 Seb
* Added everything necessary to use portal_caches

2006-10-30 Kevin
* Fix ID handling in category importing tool. Now the 4 category tree representation (described in the openoffice example file) can be imported.

2006-10-04 Kevin
* Add Tips on category import fast input screen to help user.

2006-10-03 Kevin
* Mass category import from an OpenOffice document is now much more flexible.

2006-09-15 Aurel
* remove immediateReindex and pass parameter explicitely in Base_validateRelation

2006-09-15 Aurel
* set flag to update bt workflow

2006-08-25 Stefan
* Update naming convention script.

2006-08-23 jerome
* remove Base_TranslateString

2006-08-22 bartek
* return select_expression from z_search_result

2006-08-11 jerome
* when copy/paste a person, reset the login on the new person for ERP5Security.

2006-08-06 jerome
* remove skins to create module using a scribus file; they are now part of erp5_pdf_editor.

2006-07-21 aurel
* register checked uid in selection in Base_callDialogMethod
* execute Base_setDefaultSecurity when creating new module

2006-07-20 aurel
* define priority on action when creating module

2006-07-20 Kevin
* Add description on validation workflow.
